unpackaged/main/default/objects/Gearset_Deployment_Summary__c/Gearset_Deployment_Summary__c.object-meta.xml
<CustomObject>
    <label>Gearset Deployment Summary</label>
    <nameField>
        <label>Gearset Deployment Stats Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gearset Deployment Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>