unpackaged/main/default/objects/Gearset_Deployment_Summary__c/fields/Cumulative_Failed_Deployments__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Failed_Deployments__c</fullName>
    <label>Cumulative Failed Deployments</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>