unpackaged/main/default/objects/Gearset_Deployment_Summary__c/fields/Success_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Success_Percentage__c</fullName>
    <formula>( Cumulative_Successful_Deployments__c / ( Cumulative_Failed_Deployments__c  +  Cumulative_Successful_Deployments__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Success Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>