unpackaged/main/default/objects/Gearset_Deployment_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Date__c</columns>
    <columns>Cumulative_Successful_Deployments__c</columns>
    <columns>Cumulative_Failed_Deployments__c</columns>
    <columns>Success_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>